--- a/client/src/states/search/search.html
+++ b/client/src/states/search/search.html
@@ -1,7 +1,9 @@
 <!--	  main    -->
 <div class="main-pages">
 <main class="w-container main-section">
-    <header></header>
+    <header
+            on-search="Search.getSearchResult(query)">
+    ></header>
 
 <!--
     <section class="ask-question-container">
@@ -38,53 +40,58 @@
             <div class="w-col w-col-10 w-col-small-12 w-col-tiny-12 w-col-big-mobile-12 column">
 
 
-                <div class="questions-group">
-                    <div class="questions-header">
-                        <svg class="icon icon-calendar">
-                            <use xlink:href="#icon-calendar"></use>
-                        </svg>
-                        <p class="calendar-number">04</p>
+                <h1 ng-repeat="hit in Search.searchresult.hits">
+                    <div class="questions-group">
+                        <div class="questions-header">
+                            <svg class="icon icon-calendar">
+                                <use xlink:href="#icon-calendar"></use>
+                            </svg>
+                            <p class="calendar-number">{{hit.question.date}}</p>
 
-                        <h1 class="questions-date">היום</h1>
-                    </div>
-                    <div class="questions">
-                        <div class="question-box">
-                            <div class="w-row">
+                            <h1 class="questions-date">{{hit.question.date}}</h1>
+                        </div>
+                        <div class="questions">
+                            <div class="question-box">
+                                <div class="w-row">
 
-                                <div class="w-col w-col-12 w-col-small-12 w-col-tiny-12 w-col-big-mobile-12 column">
+                                    <div class="w-col w-col-12 w-col-small-12 w-col-tiny-12 w-col-big-mobile-12 column">
 
-                                    <img class="owner-img"
-                                         src="https://graph.facebook.com/1498967693721500/picture?width=200&height=200">
+                                        <img class="owner-img"
+                                             src="https://graph.facebook.com/1498967693721500/picture?width=200&height=200">
 
-                                    <div class="flex-box">
-                                        <h2 class="question-title"> כמה אחוזים כדאי לתת ל"מייעץ" לסטארטאפ שלי?</h2>
-                                    </div>
-                                    <div class="flex-height">
-                                        <div class="comments-button">
-                                            <svg class="icon icon-comments">
-                                                <use xlink:href="#icon-comments"></use>
-                                            </svg>
-                                            <p>35</p>
+                                        <div class="flex-box">
+                                            <h2 class="question-title"> {{hit.question.message}}</h2>
                                         </div>
-                                        <div class="upvote-button">
-                                            <div class="triangle-button"><span class="triangle triangle-up"></span>
+                                        <div class="flex-height">
+                                            <div class="comments-button">
+                                                <svg class="icon icon-comments">
+                                                    <use xlink:href="#icon-comments"></use>
+                                                </svg>
+                                                <p>35</p>
                                             </div>
-                                            <p>5</p>
+                                            <div class="upvote-button">
+                                                <div class="triangle-button"><span class="triangle triangle-up"></span>
+                                                </div>
+                                                <p>5</p>
+                                            </div>
                                         </div>
-                                    </div>
 
+
+                                    </div>
 
                                 </div>
-
                             </div>
+
+                            <!--			end of question ng-repeat-->
+
                         </div>
 
-                        <!--			end of question ng-repeat-->
 
                     </div>
 
+                </h1>
 
-                </div>
+
 
             </div>
         </div>
