fix actions (login , logout....)

--- a/client/src/states/search/search.html
+++ b/client/src/states/search/search.html
@@ -54,7 +54,7 @@
                             <div class="question-box">
                                 <div class="w-row">
 
-                                    <div class="w-col w-col-12 w-col-small-12 w-col-tiny-12 w-col-big-mobile-12 column">
+                                    <div class="w-col w-col-12 w-col-small-12 w-col-tiny-12 w-col-big-mobile-12 column" ui-sref="home.talkFS">
                                         <!-- TO DO: add owner image in ng-src      -->
                                         <img class="owner-img" ng-src="">
 										
