--- a/client/src/states/insidetalk/talkFactSheet.html
+++ b/client/src/states/insidetalk/talkFactSheet.html
@@ -68,7 +68,7 @@
 
                                 <!--					TO DO: add currentUser image -->
                                 <img class="owner-img small"
-                                     ng-src="https://graph.facebook.com/1498967693721500/picture?width=200&height=200"
+                                     ng-src="https://graph.facebook.com/" + talkFS.fsResult.question.personId  + "/picture + ?width=200&height=200"
                                      alt="profile-image"></div>
                         </div>
                         <div class="comment-section">
