--- a/client/src/states/search/search.html
+++ b/client/src/states/search/search.html
@@ -49,7 +49,7 @@
                             <svg class="icon icon-calendar">
                                 <use xlink:href="#icon-calendar"></use>
                             </svg>
-                            <p class="calendar-number">{{hit.question.date}}</p>
+                            <p class="calendar-number"></p>
 
                             <h1 class="questions-date">{{hit.question.date}}</h1>
                         </div>
