client + sever: according to our list + bug fixes

--- a/client/src/states/login/login.html
+++ b/client/src/states/login/login.html
@@ -1,3 +1,8 @@
+<!--Todo Elad - add error message for login/signup
+login.loginErrorMessage
+login.signUpErrorMessage
+login.resetPasswordErrorMessage-->
+
 <div class="login-page">
 <div id="login-modal"><div onclick="window.history.back()" class="close login">
     <svg class="icon icon-close">
