Changes: 1. applyied font-face fonts 2. added 'time ago' filter for calculating answers 'created_time' 3.  talkFactSheet - added the getPicId() function to the expression for background image Todo: get all the images to a folder on the server so we can call them. 4. talkFactSheet - added profile images and links to profile 5. some scss changes 6. added more 'נושאים חמים' and connected them to the search 7. added 'most popular' icon 8. added profile images and usernames (as titles) 9.

--- a/client/src/app.html
+++ b/client/src/app.html
@@ -55,6 +55,26 @@
         <path class="path1"
               d="M16 1.333c-8.451 0-16 5.635-16 13.343 0 2.733 0.985 5.417 2.729 7.5 0.073 2.44-1.364 5.941-2.657 8.491 3.469-0.627 8.401-2.011 10.637-3.381 12.315 2.996 21.291-4.54 21.291-12.609 0-7.749-7.601-13.343-16-13.343zM9.333 16.667c-1.105 0-2-0.895-2-2s0.895-2 2-2 2 0.895 2 2-0.895 2-2 2zM16 16.667c-1.105 0-2-0.895-2-2s0.895-2 2-2 2 0.895 2 2-0.895 2-2 2zM22.667 16.667c-1.104 0-2-0.895-2-2s0.896-2 2-2c1.105 0 2 0.895 2 2s-0.895 2-2 2z"></path>
     </symbol>
+	<symbol id="icon-popular" viewBox="0 0 29 32">
+<title>popular</title>
+<path class="path1" fill="#ffd54f" d="M21.154 11.15l2.65-6.5c0.050-0.15 0.050-0.35-0.050-0.5l-0.2-0.25h-0.25l-6.75 1.8-5.15-4.55-0.2-0.15h-0.2c-0.3 0-0.55 0.25-0.55 0.5l-0.4 7-5.85 3.65c-0.2 0.1-0.25 0.3-0.25 0.5l0.050 0.35 6.7 2.7 3.25 9.9c0.050 0.25 0.3 0.4 0.5 0.4s0.45-0.15 0.5-0.35l3.15-8.5 6.3 0.75c0.2 0 0.4-0.1 0.45-0.3l0.15-0.3-3.85-6.15z"></path>
+<path class="path2" fill="#ffecb3" d="M17.454 6.5l-1.15 0.35-1.35-1.2 4.25 10.65 2.25 0.25z"></path>
+<path class="path3" fill="#ffe082" d="M12.604 3.55l-1.2-1.050-0.35 6.6-0.45 0.25 4.85 12.15 2-5.45 0.15 0.050z"></path>
+<path class="path4" fill="#ffca28" d="M14.554 24.85l-0.85-2.55 0.55-0.2 0.35 1 0.65-1.8 0.55 0.2-1.25 3.35zM16.154 20.45l-0.55-0.2 1.75-4.7 2.35 0.3-0.050 0.55-1.9-0.25-1.6 4.3zM23.305 16.4l-0.6-1 0.5-0.3 0.6 1-0.5 0.3zM11.555 15.7l-0.25-0.7-6.5-2.6 0.75-0.45 0.15 0.2 6.1 2.45 0.3 0.95-0.55 0.15zM6.854 11.8l-0.3-0.5 3.9-2.45 0.3 0.5-3.9 2.45zM21.305 9.35l-0.55-0.2 1.75-4.25 0.55 0.2-1.75 4.25zM16.404 6.8l-1.050-0.95 0.4-0.45 0.85 0.75 5.3-1.4 0.15 0.55-5.65 1.5zM11.854 2.8l-0.35-0.3h-0.3l0.050-1 1 0.9-0.4 0.4z"></path>
+<path class="path5" fill="#8e1c1c" d="M8.954 25h11v2.5h-11v-2.5z"></path>
+<path class="path6" fill="#b71c1c" d="M6.954 26.5h15v4h-15v-4z"></path>
+<path class="path7" fill="#8e1c1c" d="M6.454 30h16v1h-16v-1z"></path>
+<path class="path8" fill="#ffca28" d="M6.854 24.5l-2.1-2.85c-0.5-1.55-0.5-3.15 0-4.65 0.050-0.15 0.2-0.3 0.4-0.35s0.35 0.050 0.5 0.15c1.7 2.15 2.2 5.1 1.2 7.7z"></path>
+<path class="path9" fill="#ffca28" d="M4.154 20.55c-0.2-0.45-0.35-0.8-0.45-1.15 0.85-2.6 0.3-5.45-1.45-7.5-0.1-0.1-0.25-0.15-0.35-0.15-0.25 0-0.4 0.15-0.5 0.35-0.8 2.65-0.050 5.55 1.85 7.55v0c0.1 0.35 0.25 0.7 0.45 1.15l0.45-0.25z"></path>
+<path class="path10" fill="#ffb300" d="M5.704 22c-0.4 0-0.75-0.45-0.75-1s0.35-1 0.75-1 0.75 0.45 0.75 1-0.35 1-0.75 1z"></path>
+<path class="path11" fill="#ffb300" d="M2.354 19.7c-0.25 0-0.55-0.15-0.8-0.35-0.2-0.2-0.3-0.4-0.35-0.6-0.050-0.25 0-0.5 0.15-0.65 0.3-0.3 0.85-0.2 1.25 0.2 0.2 0.2 0.3 0.4 0.35 0.6 0.050 0.25 0 0.5-0.15 0.65-0.1 0.1-0.3 0.15-0.45 0.15z"></path>
+<path class="path12" fill="#ffb300" d="M7.954 25.2c-0.35-0.25-0.75-0.55-1.15-0.95-0.85-2.6-3-4.6-5.7-5.15-0.2-0.050-0.4 0.050-0.5 0.2s-0.1 0.3-0.050 0.45c0.95 2.55 3.25 4.45 5.95 4.9 0.4 0.35 0.8 0.7 1.15 0.95l0.3-0.4z"></path>
+<path class="path13" fill="#ffe082" d="M22.054 24.5l2.1-2.85c0.5-1.55 0.5-3.15 0-4.65-0.050-0.15-0.2-0.3-0.4-0.35s-0.35 0.050-0.5 0.15c-1.7 2.15-2.2 5.1-1.2 7.7z"></path>
+<path class="path14" fill="#ffd54f" d="M24.754 20.55c0.2-0.45 0.35-0.8 0.45-1.15-0.85-2.6-0.3-5.45 1.45-7.5 0.1-0.1 0.25-0.15 0.35-0.15 0.25 0 0.4 0.15 0.5 0.35 0.8 2.65 0.050 5.55-1.85 7.55v0c-0.1 0.35-0.25 0.7-0.45 1.15l-0.45-0.25z"></path>
+<path class="path15" fill="#ffb300" d="M22.454 21c0-0.55 0.35-1 0.75-1s0.75 0.45 0.75 1-0.35 1-0.75 1-0.75-0.45-0.75-1z"></path>
+<path class="path16" fill="#ffb300" d="M26.104 19.5c-0.15-0.15-0.2-0.4-0.15-0.65 0.050-0.2 0.15-0.45 0.35-0.6 0.4-0.4 0.95-0.45 1.25-0.2 0.15 0.15 0.2 0.4 0.15 0.65-0.050 0.2-0.15 0.45-0.35 0.6-0.25 0.25-0.5 0.35-0.8 0.35-0.15 0.050-0.35 0-0.45-0.15z"></path>
+<path class="path17" fill="#ffca28" d="M20.954 25.2c0.35-0.25 0.75-0.55 1.15-0.95 0.85-2.6 3-4.6 5.7-5.15 0.2-0.050 0.4 0.050 0.5 0.2s0.1 0.3 0.050 0.45c-0.95 2.55-3.25 4.45-5.95 4.9-0.4 0.35-0.8 0.7-1.15 0.95l-0.3-0.4z"></path>
+</symbol>
 </svg>	
 	
 </body>
