--- a/client/src/states/search/search.html
+++ b/client/src/states/search/search.html
@@ -64,7 +64,7 @@
 		
 		
         <div class="w-row">
-            <div class="w-col w-col-2 w-col-small-0 w-col-tiny-0 w-col-big-mobile-0 column categories-container">
+            <div class="w-col w-col-2  w-col-medium-0 w-col-small-0 w-col-tiny-0 w-col-big-mobile-0 column categories-container">
                 <div class="categories-header">
                     <h1 class="categories-title">הנושאים החמים</h1>
                 </div>
@@ -79,7 +79,7 @@
                     <li ng-click="Search.getSearchResult('רעיונות')" class="flex-box"><a href="">רעיונות</a></li>
 				</ul>
                     </div>
-                    <div class="w-col w-col-10 w-col-small-12 w-col-tiny-12 w-col-big-mobile-12 column">
+                    <div class="w-col w-col-10 w-col-medium-12 w-col-small-12 w-col-tiny-12 w-col-big-mobile-12 column">
 
 
 
