--- a/client/src/app.html
+++ b/client/src/app.html
@@ -5,6 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, user-scalable=no" />
     <title>Startapp Knowelge DB</title>
+	
+	<script>
+!function(){function c(){var a=b.createElement("script");
+a.src='https://resend.io/widget.js',a.async=!0,a.onload=function(){__init('RANmpiVFJkN3RKQlFJVUE9PQ==')},
+b.getElementsByTagName("head")[0].appendChild(a)}var a=window,b=document;
+a.attachEvent?a.attachEvent("onload",c):a.addEventListener("load",c,!1)}();
+</script>
 </head>
 <body dir="rtl">
 <ui-view id="app"></ui-view>
