--- a/client/src/app.html
+++ b/client/src/app.html
@@ -215,6 +215,22 @@ a.attachEvent?a.attachEvent("onload",c):a.addEventListener("load",c,!1)}();
 	
 </svg>	
 	
+	
+<style>
+	.resendio .resendio-input-section .resendio-input-section-input-area-textarea{
+		
+    direction: auto !important;
+	}
+	.resendio .resendio-conversation-message-container.other.widget .resendio-conversation-message-text{
+	direction: auto !important;	
+	}
+	.resendio .resendio-conversation{
+	direction: auto !important;		
+	}
+
+</style>	
+	
+	
 </body>
 
 </html>
