--- a/client/src/app.html
+++ b/client/src/app.html
@@ -219,14 +219,12 @@ a.attachEvent?a.attachEvent("onload",c):a.addEventListener("load",c,!1)}();
 <style>
 	.resendio .resendio-input-section .resendio-input-section-input-area-textarea{
 		
-    direction: auto !important;
+    direction: rtl !important;
 	}
 	.resendio .resendio-conversation-message-container.other.widget .resendio-conversation-message-text{
-	direction: auto !important;	
+	direction: rtl !important;	
 	}
-	.resendio .resendio-conversation{
-	direction: auto !important;		
-	}
+
 
 </style>	
 	
