fixes before meeting

--- a/client/src/states/search/search.html
+++ b/client/src/states/search/search.html
@@ -6,8 +6,8 @@
 
             <header on-search="Search.getSearchResult(query)" query="Search.query">
             </header>
-
-
+            <img src='../../assets/images/1.png'>
+            <img id="1" src="../../assets/images/No-Youre-Awesome-Meme-12.jpg">
 
             <!--
 
