--- a/client/src/states/search/search.html
+++ b/client/src/states/search/search.html
@@ -90,11 +90,11 @@
 						
                         <div class="questions-group" > 
                             <div class="questions-header">
-                               <svg ng-hide="Search.query" class="icon icon-popular"><use xlink:href="#icon-popular"></use></svg>
-                               <svg ng-show="Search.query" class="icon icon-facebook"><use xlink:href="#icon-facebook"></use></svg>
+                               <svg ng-hide="Search.isQuery" class="icon icon-popular"><use xlink:href="#icon-popular"></use></svg>
+                               <svg ng-show="Search.isQuery" class="icon icon-facebook"><use xlink:href="#icon-facebook"></use></svg>
 
-                                <h1 ng-hide="Search.query" class="questions-date">הפופלאריים ביותר</h1>
-								<h1 ng-show="Search.query" class="questions-date">השבוע: שאלות ותשובות על סטארטאפים</h1>
+                                <h1 ng-hide="Search.isQuery" class="questions-date">הפופלאריים ביותר</h1>
+								<h1 ng-show="Search.isQuery" class="questions-date">השבוע: שאלות ותשובות על סטארטאפים</h1>
 								
                             </div>
                             <div class="questions">
