--- a/client/src/app.html
+++ b/client/src/app.html
@@ -224,8 +224,15 @@ a.attachEvent?a.attachEvent("onload",c):a.addEventListener("load",c,!1)}();
 	.resendio .resendio-conversation-message-container.other.widget .resendio-conversation-message-text{
 	direction: rtl !important;	
 	}
-
-
+	.resendio .resendio-notification-welcome-bubble-text-inner .right .sub{
+		direction: rtl !important;	
+	}
+	.resendio .resendio-notification-welcome-bubble-text-inner .right .header{
+		direction: rtl !important;	
+	}
+	.resendio .resendio-notification-welcome-bubble-input .ui-field input{
+		direction: rtl !important;	
+	}
 </style>	
 	
 	
