--- a/client/src/states/login/login.html
+++ b/client/src/states/login/login.html
@@ -12,25 +12,20 @@ login.resetPasswordErrorMessage-->
 <div id="login-box">
 
     <div class="main-logo">
-        <svg class="icon icon-logo-small logo-symbol">
-            <use xlink:href="#icon-logo-small"></use>
-        </svg>
-        <svg class="icon logo-svg-text">
-            <use xlink:href="#icon-logo-text"></use>
-        </svg>
+       <img class="vulu-logo" src="../../assets/images/vulu-logo.svg">
     </div>
 	
 	<div ng-hide="signupForm === false">
-    <h1 class="main-header login">הרשם כדי להגיב או להצביע לשאלות</h1>
+    <h1 class="main-header login">הרשמ/י כדי להגיב או להצביע לשאלות</h1>
 
-    <p class="main-body login"> Talkme הוא מנוע חיפוש ליזמים שבוא ניתן למצוא ולשתף ידע בכל מה שקשור לעולם הסטארטאפים.
+    <p class="main-body login"> Vulu הוא מנוע חיפוש ליזמים שבוא ניתן למצוא ולשתף ידע בכל מה שקשור לעולם הסטארטאפים.
         השירות אינו כרוך בתשלום.</p>
 
     <div class="form-container">
         <button id="facebookBn" type="button" id="login" ng-click="login.fbLogin()" href="#" target="_blank"
                 alt="Login with Facebook"><img
                 src="http://res.cloudinary.com/talkme-co/image/upload/v1445607368/facebook-icon_jfwcig.svg"
-                class="iconsocial"><span class="primary-text">המשך עם פייסבוק</span></button>
+                class="iconsocial"><span class="primary-text">המשיכו עם פייסבוק</span></button>
         <p class="or">או</p>
 
 			
@@ -43,7 +38,7 @@ login.resetPasswordErrorMessage-->
                    required="required"/> <br/>
             <input type="submit" id="SignUpSubmit" class="submit" value="הרשמה"/>
         </form>
-		<a href="" class="reset-pass" ng-click="signupForm = false">יש לך משתמש? הכנס כאן</a>
+		<a href="" class="reset-pass" ng-click="signupForm = false">יש לך משתמש? הכנס/י כאן</a>
 		<p ng-show="login.warning" class="reset-pass error">{{login.errorMessage}}.</p>
 		</div>
     </div>
@@ -58,7 +53,7 @@ login.resetPasswordErrorMessage-->
         <button id="facebookBn" type="button" id="login" ng-click="login.fbLogin()" href="#" target="_blank"
                 alt="Login with Facebook"><img
                 src="http://res.cloudinary.com/talkme-co/image/upload/v1445607368/facebook-icon_jfwcig.svg"
-                class="iconsocial"><span class="primary-text">המשך עם פייסבוק</span></button>
+                class="iconsocial"><span class="primary-text">המשיכו עם פייסבוק</span></button>
         <p class="or">או</p>
 	
         <form ng-submit="login.login()" id="login-form">
@@ -70,7 +65,7 @@ login.resetPasswordErrorMessage-->
             <input type="submit" id="submit" class="submit login" value="כניסה"/>
 			
         </form>
-		<a href="" class="reset-pass" ng-click="login.resetPassword()">שכחת ססמא? לחץ כאן</a>
+		<a href="" class="reset-pass" ng-click="login.resetPassword()">שכחת ססמא? לחצ/י כאן</a>
 		<a href="" class="reset-pass" ng-click="signupForm = true">בחזרה להרשמה</a>	
 		<p ng-show="login.warning" class="reset-pass error">{{login.errorMessage}}.</p>
 		</div>
