--- a/client/src/states/login/login.html
+++ b/client/src/states/login/login.html
@@ -12,7 +12,7 @@ login.resetPasswordErrorMessage-->
 <div id="login-box">
 
     <div class="main-logo">
-       <img class="vulu-logo" src="../../assets/images/vulu-logo.svg">
+       <img class="vulu-logo" src="http://res.cloudinary.com/talkme-co/image/upload/v1477004013/vulu-logo_f9dhbq.svg">
     </div>
 	
 	<div ng-hide="signupForm === false">
