--- a/client/src/states/search/search.html
+++ b/client/src/states/search/search.html
@@ -50,8 +50,8 @@
 			</svg>
 	    </span>	
 		
-		<h1 class="welcome-title">ברוכים הבאים לTalkme</h1>	
-		<h1 class="welcome-subtitle">מנוע חיפוש על כל נושא בעולם הסטארטאפים</h1>
+		<h1 class="welcome-title">ברוכים הבאים לVulu</h1>	
+		<h1 class="welcome-subtitle">שיחות על כל נושא בעולם הסטארטאפים</h1>
 			
 		<div class="icons">
 		<svg class="icon icon-icons"><use xlink:href="#icon-icons"></use></svg>
