--- a/client/src/app.html
+++ b/client/src/app.html
@@ -22,28 +22,32 @@
     </script>
 
     <script type="text/javascript">
-        (function (e, t) {
-            function r(e, t) {
-                e[t] = function () {
-                    e.push([t].concat(Array.prototype.slice.call(arguments, 0)));
+        (function(e, t) {
+            function i(e, t) {
+                e[t] = function() {
+                    e.push([ t ].concat(Array.prototype.slice.call(arguments, 0)));
                 };
             }
-
-            var n = "JacoRecorder";
-            (function (e, t, i, s) {
-                if (!i.__VERSION) {
-                    e[n] = i;
-                    var o = ["init", "identify", "startRecording", "stopRecording", "removeUserTracking", "setUserInfo"];
-                    for (var u = 0; u < o.length; u++) r(i, o[u]);
-                    i.__VERSION = 2, i.__INIT_TIME = 1 * new Date;
-                    var a = t.createElement("script");
-                    a.async = !0, a.setAttribute("crossorigin", "anonymous"), a.src = s;
-                    var f = t.getElementsByTagName("head")[0];
-                    f.appendChild(a);
+            function s() {
+                var e = t.location.hostname.match(/[a-z0-9][a-z0-9\-]+\.[a-z\.]{2,6}$/i), n = e ? e[0] : null, i = "; domain=." + n + "; path=/";
+                t.referrer && t.referrer.indexOf(n) === -1 ? t.cookie = "jaco_referer=" + t.referrer + i : t.cookie = "jaco_referer=" + r + i;
+            }
+            var n = "JacoRecorder", r = "none";
+            (function(e, t, r, o) {
+                if (!r.__VERSION) {
+                    e[n] = r;
+                    var u = [ "init", "identify", "startRecording", "stopRecording", "removeUserTracking", "setUserInfo" ];
+                    for (var a = 0; a < u.length; a++) i(r, u[a]);
+                    s(), r.__VERSION = 2.1, r.__INIT_TIME = 1 * new Date;
+                    var f = t.createElement("script");
+                    f.async = !0, f.setAttribute("crossorigin", "anonymous"), f.src = o;
+                    var l = t.getElementsByTagName("head")[0];
+                    l.appendChild(f);
                 }
-            })(e, t, e[n] || [], "//recorder-assets.getjaco.com/recorder_v2.js");
-        }).call(window, window, document), window.JacoRecorder.push(["init", "b23e9c9c-482b-4c8d-810e-e3b316c9cfac", {}]);
+            })(e, t, e[n] || [], "https://recorder-assets.getjaco.com/recorder_v2.js");
+        }).call(window, window, document), window.JacoRecorder.push([ "init", "acd4c593-7d2a-4484-b9a9-978fbb635701", {} ]);
     </script>
+
 	<script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
